--- a/public_goods/locale/it/LC_MESSAGES/django.po
+++ b/public_goods/locale/it/LC_MESSAGES/django.po
@@ -5,13 +5,13 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: Otree\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-10-29 12:07+0100\n"
-"PO-Revision-Date: 2015-10-28 14:44+0100\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"POT-Creation-Date: 2015-11-02 15:29+0100\n"
+"PO-Revision-Date: 2015-11-02 15:40+0100\n"
+"Last-Translator: domenico <dome.colucci@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"Language: Italian\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -40,7 +40,7 @@ msgstr "corretta"
 
 #: templates/public_goods/Feedback.html:18
 msgid "incorrect"
-msgstr "incorretta"
+msgstr "errata"
 
 #: templates/public_goods/Feedback.html:22
 #: templates/public_goods/Question.html:12
@@ -49,10 +49,9 @@ msgid ""
 "contributed 40, and 1 participant contributed nothing. What would be the "
 "payoff of the participant who contributed 80 points?"
 msgstr ""
-"Supponi di essere in gruppo, 1 partecipante ha contribuito di 80 punti, 1 "
+"Considera un gruppo in cui 1 partecipante ha contribuito di 80 punti, 1 "
 "partecipante ha contribuito di 40, e 1 partecipante non ha contribuito. "
-"Quale potrebbe essere la ricompensa per il partecipante che ha contribuito "
-"di 80 punti?"
+"Quale sarebbe il guadagno per il partecipante che ha contribuito di 80 punti?"
 
 #: templates/public_goods/Feedback.html:29
 msgid "<b>Solution: 92 points</b>"
@@ -65,6 +64,11 @@ msgid ""
 "participant got an equal share of the earnings, that is, 216/3=72. Hence, "
 "payoff for the participant who contributed 80 points was 100-80+72=92."
 msgstr ""
+"<b>Spiegazione:</b> Il contributo totale di tutti i partecipanti è stato "
+"pari a 80 + 40 + 0 = 120. Il guadagno totale generato dal progetto è stata "
+"pari a 120*1.8= 216. Tutti i partecipanti hanno ricevuto la stessa quota di "
+"tale quantità, cioè 216/3=72. Quindi, il guadagno per il partecipante che ha "
+"contribuito 80 punti è stato pari a 100-80+72=92."
 
 #: templates/public_goods/Instructions.html:3
 msgid "Instructions"
@@ -72,38 +76,54 @@ msgstr "Istruzioni"
 
 #: templates/public_goods/Instructions.html:5
 #, python-format
+#| msgid ""
+#| "In this study, you will be in a randomly formed group of 3 or 4 "
+#| "participants. Each participant in the group is given %(endowment)s. The "
+#| "group has the opportunity to undertake a joint project. Each participant "
+#| "in the group decides how much she or he is going to contribute to the "
+#| "project. Contribution could be any integer from 0 to "
+#| "%(Constants.endowment)s."
 msgid ""
-"In this study, you will be in a randomly formed group of "
-"%(Constants.players_per_group)s participants. Each participant in the group "
-"is given %(Constants.endowment)s. The group has the opportunity to undertake "
-"a joint project. Each participant in the group decides how much she or he is "
-"going to contribute to the project. Contribution could be any integer from 0 "
-"to %(Constants.endowment)s."
+"In this study, you will be in a randomly formed group of 3 or 4 "
+"participants. Each participant in the group is given %(endowment)s. The "
+"group has the opportunity to undertake a joint project. Each participant in "
+"the group decides how much she or he is going to contribute to the project. "
+"Contribution could be any integer from 0 to %(endowment)s."
 msgstr ""
+"In questo studio sarai parte di un gruppo composto da 3 o 4 partecipanti "
+"selezionati casualmente. Ad ogni partecipante del gruppo sono assegnati "
+"%(endowment)s. Il gruppo ha l'opportunità di intraprendere un progetto "
+"congiunto. Ogni partecipante nel gruppo decide quanto contribuirà al "
+"progetto. Il contributo può essere ogni numero intero da 0 a %(endowment)s."
 
 #: templates/public_goods/Instructions.html:12
 #, python-format
 msgid ""
 "The earnings from the project are calculated as follows: The contributions "
-"of all %(Constants.players_per_group)s participants are added up, the total "
-"contribution is multiplied by a factor of %(Constants.efficiency_factor)s, "
-"and the resulting amount is the total earnings from the project, which is "
-"evenly split among all %(Constants.players_per_group)s participants. Your "
-"payoff equals your earnings from the project, plus the amount you did not "
+"of all participants are added up, the total contribution is multiplied by a "
+"factor of %(efficiency)s, and the resulting amount is the total earnings "
+"from the project, which is evenly split among all participants. Your payoff "
+"equals your earnings from the project, plus the amount you did not "
 "contribute."
 msgstr ""
+"I guadagni derivanti dal progetto sono calcolati come segue: i contributi di "
+"tutti i partecipanti vengono sommati, il contributo totale è moltiplicato "
+"per un fattore pari a %(efficiency)s, e il totale che ne risulta è il "
+"guadagno totale derivante dal progetto, che viene distribuito in parti "
+"uguali tra tutti i partecipanti. Il tuo guadagno complessivo è pari alla tua "
+"quota di guadagno derivante dal progetto, più quanto non avevi contribuito. "
 
 #: templates/public_goods/Instructions.html:19
 msgid ""
 "For your convenience, these instructions will remain available to you on all "
 "subsequent screens of this study."
 msgstr ""
+"Per comodità queste istruzioni rimarranno disponibili in tutte le successive "
+"schermate. "
 
 #: templates/public_goods/Introduction.html:7
-#, fuzzy
-#| msgid "Instructions"
 msgid "Introduction"
-msgstr "Istruzioni"
+msgstr "Introduzione"
 
 #: templates/public_goods/Introduction.html:15
 msgid ""
@@ -115,58 +135,59 @@ msgstr ""
 
 #: templates/public_goods/Question.html:7
 msgid "Understanding Question 1 of 1"
-msgstr ""
+msgstr "Domanda di comprensione 1 di 1"
 
 #: templates/public_goods/Question.html:18
 msgid "His payoff would be"
-msgstr "La sua ricompensa potrebbe essere"
+msgstr "Il suo guadagno sarebbe"
 
 #: templates/public_goods/Results.html:7
 msgid "Results"
 msgstr "Risultati"
 
-#: views.py:48
-#, fuzzy
-#| msgid "Other participants contributed"
+#: views.py:91
 msgid "Waiting for other participants to contribute."
-msgstr "Contributo dell'altro partecipante"
+msgstr "In attesa dei contributi degli altri partecipanti"
 
-#: views.py:63
+#: views.py:106
 msgid "You contributed"
 msgstr "Il tuo contributo"
 
-#: views.py:64
+#: views.py:107
 msgid "Other participants contributed"
 msgstr "Contributo dell'altro partecipante"
 
-#: views.py:69
+#: views.py:112
 msgid "Total contribution"
 msgstr "Contributi totali"
 
-#: views.py:71
+#: views.py:114
 msgid "Total earnings from the project"
 msgstr "Guadagni totali dal progetto"
 
-#: views.py:72
+#: views.py:115
 msgid "Your earnings from the project"
 msgstr "Il tuo guadagno dal progetto"
 
-#: views.py:74
+#: views.py:117
 msgid "Thus in total you earned"
 msgstr "Quindi il totale hai guadagnato"
 
-#: views.py:75
+#: views.py:118
 msgid "In addition you get a participation fee of"
 msgstr "In aggiunta prendi un premio di partecipazione di"
 
-#: views.py:77
-msgid "So in sum you will get"
-msgstr "Quindi in totale prendi"
+#: views.py:120
+msgid "Your payoff in this activity"
+msgstr "Il tuo profitto in questa attività"
 
-#: views.py:80
+#: views.py:123
 msgid "Public goods game"
-msgstr ""
+msgstr "Gioco di contribuzione a un bene pubblico"
 
-#: views.py:93
-msgid "Gioco concluso, i risultati verranno mostrati in seguito"
-msgstr ""
+#: views.py:136
+msgid "This activity is over. Results will be shown later."
+msgstr "Questa attività è conclusa. I risultati verranno mostrati in seguito."
+
+#~ msgid "So in sum you will get"
+#~ msgstr "Quindi in totale prendi"
