Modifiche del 9/11: traduzioni, parametrizzazioni e varie limature

--- a/public_goods/locale/it/LC_MESSAGES/django.po
+++ b/public_goods/locale/it/LC_MESSAGES/django.po
@@ -7,9 +7,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Otree\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-11-02 15:29+0100\n"
-"PO-Revision-Date: 2015-11-02 15:40+0100\n"
-"Last-Translator: domenico <dome.colucci@gmail.com>\n"
+"POT-Creation-Date: 2015-11-09 14:58+0100\n"
+"PO-Revision-Date: 2015-11-09 15:05+0100\n"
+"Last-Translator: \n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: Italian\n"
 "MIME-Version: 1.0\n"
@@ -25,6 +25,11 @@ msgstr "Contributo"
 #: templates/public_goods/Contribute.html:11
 msgid "How much will you contribute to the project (from 0 to 100)?"
 msgstr "Quanto vuoi contribuire al progetto (da 0 a 100)?"
+
+#: templates/public_goods/Feedback.html:7
+#| msgid "Understanding Question 1 of 1"
+msgid "Solution to Understanding Question 1 of 1"
+msgstr "Soluzione alla Domanda di comprensione 1 di 1"
 
 #: templates/public_goods/Feedback.html:14
 msgid "Your answer"
@@ -54,21 +59,27 @@ msgstr ""
 "Quale sarebbe il guadagno per il partecipante che ha contribuito di 80 punti?"
 
 #: templates/public_goods/Feedback.html:29
-msgid "<b>Solution: 92 points</b>"
-msgstr "<b>Soluzione: 92 punti</b>"
+#| msgid "<b>Solution: 92 points</b>"
+msgid "<b>Solution: 100 points</b>"
+msgstr "<b>Soluzione: 100 punti</b>"
 
 #: templates/public_goods/Feedback.html:35
+#| msgid ""
+#| "<b>Explanation:</b> Total contribution from all participants was "
+#| "80+40+0=120. Total earnings from the project were 120*1.8=216. Each "
+#| "participant got an equal share of the earnings, that is, 216/3=72. Hence, "
+#| "payoff for the participant who contributed 80 points was 100-80+72=92."
 msgid ""
 "<b>Explanation:</b> Total contribution from all participants was "
-"80+40+0=120. Total earnings from the project were 120*1.8=216. Each "
-"participant got an equal share of the earnings, that is, 216/3=72. Hence, "
-"payoff for the participant who contributed 80 points was 100-80+72=92."
+"80+40+0=120. Total earnings from the project were 120*2=240. Each "
+"participant got an equal share of the earnings, that is, 240/3=80. Hence, "
+"payoff for the participant who contributed 80 points was 100-80+80=80."
 msgstr ""
 "<b>Spiegazione:</b> Il contributo totale di tutti i partecipanti è stato "
 "pari a 80 + 40 + 0 = 120. Il guadagno totale generato dal progetto è stata "
-"pari a 120*1.8= 216. Tutti i partecipanti hanno ricevuto la stessa quota di "
-"tale quantità, cioè 216/3=72. Quindi, il guadagno per il partecipante che ha "
-"contribuito 80 punti è stato pari a 100-80+72=92."
+"pari a 120*2= 240. Tutti i partecipanti hanno ricevuto la stessa quota di "
+"tale quantità, cioè 240/3=80. Quindi, il guadagno per il partecipante che ha "
+"contribuito 80 punti è stato pari a 100-80+80=100."
 
 #: templates/public_goods/Instructions.html:3
 msgid "Instructions"
@@ -76,13 +87,6 @@ msgstr "Istruzioni"
 
 #: templates/public_goods/Instructions.html:5
 #, python-format
-#| msgid ""
-#| "In this study, you will be in a randomly formed group of 3 or 4 "
-#| "participants. Each participant in the group is given %(endowment)s. The "
-#| "group has the opportunity to undertake a joint project. Each participant "
-#| "in the group decides how much she or he is going to contribute to the "
-#| "project. Contribution could be any integer from 0 to "
-#| "%(Constants.endowment)s."
 msgid ""
 "In this study, you will be in a randomly formed group of 3 or 4 "
 "participants. Each participant in the group is given %(endowment)s. The "
