--- a/risk/locale/it/LC_MESSAGES/django.po
+++ b/risk/locale/it/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Otree_risk\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-11-06 18:16+0100\n"
-"PO-Revision-Date: 2015-11-06 18:18+0100\n"
+"POT-Creation-Date: 2015-11-12 18:00+0100\n"
+"PO-Revision-Date: 2015-11-12 18:04+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: Italian\n"
@@ -27,14 +27,20 @@ msgid "My profit in the case of a negative investment outcome would be"
 msgstr "Il mio profitto in caso di esito negativo dell'investimento sarebbe"
 
 #: templates/risk/Instructions.html:6
-msgid "bla bla"
+msgid ""
+"You have an endowment of 100 points.  You can choose to invest part of this "
+"sum in a risky project. If the project goes well, which can happen with a "
+"probability of 1/2 you will obtain 2.5 points for each point you invested. </"
+"p><p>If the project fails instead, you'll loose all the points invested in "
+"it. The points you do not invest will remain to you whatever the outcome of "
+"the project."
 msgstr ""
-"Hai a disposizione 100 punti.  Puoi decidere di investire una parte di questa "
-"somma in un progetto rischioso. Se il progetto va bene cosa che può accadere "
-"con probabilità pari a 1/2  per ogni punto investito otterrai 2,5 punti. </"
-"p><p>Se invece il progetto va male perderai tutti i punti investiti in esso. "
-"I punti che non investi rimarranno a te inalterati quale che sia l'esito del "
-"progetto."
+"Hai a disposizione 100 punti.  Puoi decidere di investire una parte di "
+"questa somma in un progetto rischioso. Se il progetto va bene cosa che può "
+"accadere con probabilità pari a 1/2  per ogni punto investito otterrai 2,5 "
+"punti. </p><p>Se invece il progetto va male perderai tutti i punti investiti "
+"in esso. I punti che non investi rimarranno a te inalterati quale che sia "
+"l'esito del progetto."
 
 #: templates/risk/Invest.html:11
 msgid "Scegli quanto investire nel progetto rischioso"
@@ -77,9 +83,9 @@ msgstr "e quindi hai ottenuto un guadagno pari a:"
 
 #: views.py:25
 msgid ""
-"Considera la seguente situazione.                 Hai scelto di investire 8 "
-"punti dei 20 a tua disposizione.<br><br>                 Nell'ipotesi che il "
-"progetto avesse un esito positivo, quanti punti                 "
+"Considera la seguente situazione.                 Hai scelto di investire 40 "
+"punti dei 100 a tua disposizione.<br><br>                 Nell'ipotesi che "
+"il progetto avesse un esito positivo, quanti punti                 "
 "guadagneresti complessivamente?<br>                 Se, viceversa, il "
 "progetto avesse un esito negativo, quanti punti                 "
 "guadagneresti complessivamente?"
@@ -100,7 +106,7 @@ msgstr ""
 #: views.py:58
 msgid ""
 "<br><br><strong>Soluzione: </strong><br>Guadagno in caso di esito positivo = "
-"32                <br>Guadagno in caso di esito negativo = 12"
+"160                <br>Guadagno in caso di esito negativo = 60"
 msgstr ""
 
 #: views.py:60
@@ -108,9 +114,9 @@ msgid ""
 "<br><br><strong>Spiegazione: </strong> Il guadagno e' dato dalla "
 "quota                di punti che si e' deciso di non investire sommata ai "
 "punti che derivano                dall'investimento. In questo caso, "
-"nell'ipotesi di esito positivo si ha                <strong>(20 - 8) + 8 * "
-"2.5 = 32</strong>, mentre nell'ipotesi di esito negativo                si "
-"ha <strong>(20 - 8) = 12</strong>"
+"nell'ipotesi di esito positivo si ha                <strong>(100 - 40) + 40 "
+"* 2.5 = 160</strong>, mentre nell'ipotesi di esito negativo                "
+"si ha <strong>(100 - 40) = 60 </strong>"
 msgstr ""
 
 #: views.py:89 views.py:104
@@ -129,6 +135,20 @@ msgstr "Hai investito nel progetto rischioso"
 msgid "Your payoff in this activity"
 msgstr "Il tuo guadagno in questa attività"
 
-#: views.py:135
+#: views.py:125
+msgid "In this activity you chose how much to invest in a risky project"
+msgstr ""
+"In questa attività hai scelto quanto investire in un progetto rischioso"
+
+#: views.py:136
 msgid "This activity is over. Results will be shown later."
 msgstr "Questa attività è conclusa. I risultati verranno mostrati in seguito."
+
+#~ msgid "bla bla"
+#~ msgstr ""
+#~ "Hai a disposizione 100 punti.  Puoi decidere di investire una parte di "
+#~ "questa somma in un progetto rischioso. Se il progetto va bene cosa che "
+#~ "può accadere con probabilità pari a 1/2  per ogni punto investito "
+#~ "otterrai 2,5 punti. </p><p>Se invece il progetto va male perderai tutti i "
+#~ "punti investiti in esso. I punti che non investi rimarranno a te "
+#~ "inalterati quale che sia l'esito del progetto."
