Varie modifiche al testo delle istruzioni

--- a/market/locale/it/LC_MESSAGES/django.po
+++ b/market/locale/it/LC_MESSAGES/django.po
@@ -8,15 +8,15 @@ msgstr ""
 "Project-Id-Version: Otree_market\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-11-12 17:16+0100\n"
-"PO-Revision-Date: 2015-11-12 17:21+0100\n"
+"PO-Revision-Date: 2015-11-13 19:33+0100\n"
 "Last-Translator: \n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: Italian\n"
+"Language: it\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 1.5.4\n"
+"X-Generator: Poedit 1.8.4\n"
+"Language-Team: \n"
 
 #: models.py:86 models.py:91
 msgid "My profit would be"
@@ -24,7 +24,7 @@ msgstr "Il mio profitto sarebbe"
 
 #: models.py:88 models.py:93
 msgid "My social contribution would be"
-msgstr "La mia contribuzione sociale sarebbe"
+msgstr "Il beneficio sociale della mia produzione sarebbe"
 
 #: models.py:98
 msgid "The correct answer is"
@@ -166,11 +166,11 @@ msgid ""
 "hai una quota di mercato pari al 50%.                 In questo contesto, il "
 "tuo profitto e la tua contribuzione sociale sarebbero ..."
 msgstr ""
-"Considera la seguente situazione ipotetica. Hai scelto una qualità pari a "
-"0                 e un prezzo pari a 200. Inoltre, come conseguenza delle "
-"scelte tue e                 dell’altro concorrente hai una quota di mercato "
-"pari al 50%.                 In questo contesto, il tuo profitto e la tua "
-"contribuzione sociale sarebbero ..."
+"Considera la seguente situazione ipotetica. Hai scelto una qualità pari a 0 "
+"e un prezzo pari a 200. Inoltre, come conseguenza delle scelte tue e "
+"dell’altro concorrente hai una quota di mercato pari al 50%. In questo "
+"contesto, il tuo profitto e il beneficio sociale della tua produzione "
+"sarebbero ..."
 
 #: views.py:134 views.py:183
 msgid "\"Profit\""
