--- a/market/locale/it/LC_MESSAGES/django.po
+++ b/market/locale/it/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: Otree_market\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-11-15 18:02+0100\n"
-"PO-Revision-Date: 2015-11-15 18:12+0100\n"
+"PO-Revision-Date: 2015-12-09 17:16+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: it\n"
@@ -281,6 +281,11 @@ msgid ""
 "ridurre il prezzo a 200 mantenendo la qualità uguale a 100.                 "
 "Quale delle seguenti affermazioni è vera?"
 msgstr ""
+"Considera la seguente situazione ipotetica. Nel precedente periodo hai "
+"scelto una                 qualità pari a 100 e un prezzo pari a 300. La tua "
+"quota di mercato è stata pari al 20%.                 Adesso scegli di "
+"ridurre il prezzo a 200 mantenendo la qualità uguale a 100.                 "
+"Quale delle seguenti affermazioni è vera?"
 
 #: views.py:239
 msgid "\"Affermazione corretta\""
