Correzioni ad alcuni typo

--- a/market/locale/it/LC_MESSAGES/django.po
+++ b/market/locale/it/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: Otree_market\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-01-23 12:33+0100\n"
-"PO-Revision-Date: 2016-01-23 12:36+0100\n"
+"PO-Revision-Date: 2016-01-23 18:12+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: it\n"
@@ -295,7 +295,7 @@ msgid ""
 msgstr ""
 "<br><br><strong>Spiegazione: </strong> Il profitto è pari al                "
 "differenza (Prezzo - Qualità) moltiplicata per la quota di "
-"mercato.                In questo caso hai: <strong>400 - 200) * 30 / 100 = "
+"mercato.                In questo caso hai: <strong>(400 - 200) * 30 / 100 = "
 "60 punti</strong>.                Il beneficio sociale è ottenuto "
 "moltiplicando la Qualità,                il fattore moltiplicativo (pari a "
 "1,5) e la quota di mercato. In questo caso:                <strong>200 * 1.5 "
@@ -312,7 +312,7 @@ msgid ""
 msgstr ""
 "Considera la seguente situazione ipotetica. Nel precedente periodo hai "
 "scelto una  qualità pari a 100 e un prezzo pari a 300. La tua quota di "
-"mercato è stata pari a al 20%. Adesso scegli di ridurre il prezzo a 200 "
+"mercato è stata pari  al 20%. Adesso scegli di ridurre il prezzo a 200 "
 "mantenendo la qualità uguale a 100.  Il tuo concorrente mantiene inalterate "
 "le scelte del periodo precedente."
 
