Messa a posto la traduzione della spiegazione della domanda 1 in Market, che non compariva.

--- a/market/locale/it/LC_MESSAGES/django.po
+++ b/market/locale/it/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Otree_market\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-01-23 12:33+0100\n"
-"PO-Revision-Date: 2016-01-23 18:12+0100\n"
+"POT-Creation-Date: 2016-01-26 10:31+0100\n"
+"PO-Revision-Date: 2016-01-26 10:32+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: it\n"
@@ -238,19 +238,26 @@ msgstr ""
 "punti."
 
 #: views.py:161
+#| msgid ""
+#| "<br><br><strong>Explanation: </strong> The Profit equals                "
+#| "the Total Markup (Price - Quality) multiplied by the Market "
+#| "Share.                In this case you have: <strong>(200 - 0) * 50 / 100 "
+#| "= 100 points</strong>.                The Social Contribution is obtained "
+#| "by multiplicating the Quality,                the Efficiency Factor and "
+#| "the Market Share. In this case it is:                <strong>1.5 * 0 * "
+#| "50 / 100 = 0 points</strong>."
 msgid ""
-"<br><br><strong>Explanation: </strong> The Profit equals                the "
-"Total Markup (Price - Quality) multiplied by the Market "
-"Share.                In this case you have: <strong>(200 - 0) * 50 / 100 = "
-"100 points</strong>.                The Social Contribution is obtained by "
-"multiplicating the Quality,                the Efficiency Factor and the "
-"Market Share. In this case it is:                <strong>1.5 * 0 * 50 / 100 "
-"= 0 points</strong>."
+"<br><br><strong>Explanation: </strong> Profit equals                 Markup "
+"(Price - Quality) times market share.                In this case you have: "
+"<strong>(200 - 0) * 50 / 100 = 100 points</strong>.                The "
+"Social Contribution is obtained as Quality                times the "
+"Efficiency Factor of 1.5 times market share. In this case it "
+"is:                <strong>1.5 * 0 * 50 / 100 = 0 points</strong>."
 msgstr ""
 "<br><br><strong>Spiegazione: </strong> Il profitto è pari "
 "alla                differenza (Prezzo - Qualità) moltiplicata per la quota "
-"di mercato.                In questo caso hai: <strong>(200 - 0) * 50 / 100 "
-"= 100 punti</strong>.                Il beneficio sociale è ottenuto "
+"di mercato.                In questo caso si ha: <strong>(200 - 0) * 50 / "
+"100 = 100 punti</strong>.                Il beneficio sociale è ottenuto "
 "moltiplicando la Qualità,                il fattore moltiplicativo (pari a "
 "1,5) e la quota di mercato. In questo caso:                <strong>0 * 1.5 * "
 "50 / 100 = 0 punti</strong>."
