--- a/risk/locale/it/LC_MESSAGES/django.po
+++ b/risk/locale/it/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Otree_risk\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-01-23 12:42+0100\n"
-"PO-Revision-Date: 2016-01-23 12:42+0100\n"
+"POT-Creation-Date: 2016-01-26 10:47+0100\n"
+"PO-Revision-Date: 2016-01-26 10:49+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: Italian\n"
@@ -20,21 +20,18 @@ msgstr ""
 
 #: models.py:54
 msgid "My profit in the case of a positive investment outcome would be"
-msgstr "Il mio profitto in caso di esito positivo dell'investimento sarebbe"
+msgstr ""
+"Il mio guadagno complessivo da questa attività in caso di esito positivo "
+"dell'investimento sarebbe"
 
 #: models.py:56
 msgid "My profit in the case of a negative investment outcome would be"
-msgstr "Il mio profitto in caso di esito negativo dell'investimento sarebbe"
+msgstr ""
+"Il mio guadagno complessivo da questa attività in caso di esito negativo "
+"dell'investimento sarebbe"
 
 #: templates/risk/Instructions.html:6
 #, python-format
-#| msgid ""
-#| "You have an endowment of 100 points.  You can choose to invest part of "
-#| "this sum in a risky project. If the project goes well, which can happen "
-#| "with a probability of 1/2 you will obtain 2.5 points for each point you "
-#| "invested. </p><p>If the project fails instead, you'll loose all the "
-#| "points invested in it. The points you do not invest will remain to you "
-#| "whatever the outcome of the project."
 msgid ""
 "You have an endowment of 100 points.  You can choose to invest part of this "
 "sum in a risky project. If the project goes well, which can happen with a "
@@ -51,23 +48,12 @@ msgstr ""
 "che sia l'esito del progetto."
 
 #: templates/risk/Invest.html:11
-msgid "Scegli quanto investire nel progetto rischioso"
-msgstr ""
+msgid "Choose how much to invest in the risky project"
+msgstr "Scegli quanto investire nel progetto rischioso"
 
-#: templates/risk/Question.html:7
-msgid "Understanding Question 1 of 1"
-msgstr "Domanda di comprensione 1 di 1"
-
-#: templates/risk/Question.html:12
-msgid ""
-"Considera la seguente situazione: hai scelto di investire 8 punti e il "
-"progetto ha avuto un esito positivo. Quanti punti hai ottenuto in questa "
-"sessione? E se il progetto avesse un esito negativo? Quanti punti avrai?"
-msgstr ""
-
-#: templates/risk/Question.html:19
-msgid "Avrei punti"
-msgstr ""
+#: templates/risk/Invest.html:17
+msgid "Insert a number from 0 to 100"
+msgstr "Inserisci un numero tra 0 e 100"
 
 #: templates/risk/Results.html:7
 msgid "Results"
@@ -81,7 +67,7 @@ msgstr "Ecco come e' andata."
 msgid "You invested:"
 msgstr "Hai investito: "
 
-#: templates/risk/Results.html:14 views.py:126
+#: templates/risk/Results.html:14 views.py:124
 msgid "The project went"
 msgstr "Il progetto e' andato"
 
@@ -89,74 +75,84 @@ msgstr "Il progetto e' andato"
 msgid "and therefore you obtained the payoff:"
 msgstr "e quindi hai ottenuto un guadagno pari a:"
 
+#: views.py:27
+msgid "Activity n.{}"
+msgstr "Attività n.{}"
+
 #: views.py:35
 msgid ""
+"Consider the following situation.             You chose to invest 40 of your "
+"100 points.<br><br>             Assuming the project went well, how many "
+"points             would you earn as a whole?<br>             If instead the "
+"project failed, how many points would you earn?"
+msgstr ""
 "Considera la seguente situazione.                 Hai scelto di investire 40 "
 "punti dei 100 a tua disposizione.<br><br>                 Nell'ipotesi che "
 "il progetto avesse un esito positivo, quanti punti                 "
 "guadagneresti complessivamente?<br>                 Se, viceversa, il "
 "progetto avesse un esito negativo, quanti punti                 "
 "guadagneresti complessivamente?"
-msgstr ""
+
+#: views.py:62
+msgid "\"Amount earned in case of successful project\""
+msgstr "\"Guadagno complessivo in caso di esito positivo\""
 
 #: views.py:63
-msgid "\"Guadagno complessivo in caso di esito positivo\""
-msgstr ""
+msgid "\"Amount earned in case of failed project\""
+msgstr "\"Guadagno complessivo in caso di esito negativo\""
 
-#: views.py:64
-msgid "\"Guadagno complessivo in caso di esito negativo\""
-msgstr ""
+#: views.py:66
+msgid "<br><strong>Question: </strong>"
+msgstr "<br><strong>Domanda: </strong>"
 
 #: views.py:67
-msgid "<br><strong>Domanda: </strong>"
-msgstr ""
-
-#: views.py:68
 msgid ""
-"<br><br><strong>Soluzione: </strong><br>Guadagno in caso di esito positivo = "
-"160                <br>Guadagno in caso di esito negativo = 60"
+"<br><br><strong>Solution: </strong><br>Amount earned in case of successful "
+"project = 160                <br>Amount earned in case of failed project = 60"
 msgstr ""
+"<br><br><strong>Soluzione: </strong><br>Guadagno complessivo in caso di "
+"esito positivo = 160                <br>Guadagno complessivo in caso di "
+"esito negativo = 60"
 
-#: views.py:70
+#: views.py:69
 msgid ""
-"<br><br><strong>Spiegazione: </strong> Il guadagno e' dato dalla "
-"quota                di punti che si e' deciso di non investire sommata ai "
-"punti che derivano                dall'investimento. In questo caso, "
-"nell'ipotesi di esito positivo si ha                <strong>(100 - 40) + 40 "
-"* 2.5 = 160</strong>, mentre nell'ipotesi di esito negativo                "
-"si ha <strong>(100 - 40) = 60 </strong>"
+"<br><br><strong>Explanation: </strong> You earn the sum of the "
+"points                that you retained and those coming from the project. "
+"In this case if the project succeeded                <strong>(100 - 40) + 40 "
+"* 2.5 = 160</strong>, while if the project failed                "
+"<strong>(100 - 40) = 60 </strong>"
 msgstr ""
+"<br><br><strong>Spiegazione: </strong> Il guadagno è dato dalla quota di "
+"punti che si è deciso di non investire sommata ai punti che "
+"derivano                dall'investimento. In questo caso, nell'ipotesi di "
+"esito positivo si ha                <strong>(100 - 40) + 40 * 2.5 = 160</"
+"strong>, mentre nell'ipotesi di esito negativo               si ha "
+"<strong>(100 - 40) = 60 </strong>"
 
-#: views.py:99 views.py:114
+#: views.py:97 views.py:112
 msgid "bad"
 msgstr "male"
 
-#: views.py:101 views.py:116
+#: views.py:99 views.py:114
 msgid "well"
 msgstr "bene"
 
-#: views.py:125
+#: views.py:123
 msgid "You decided to invest in the risky project"
 msgstr "Hai investito nel progetto rischioso"
 
-#: views.py:129
+#: views.py:127
 msgid "Your payoff in this activity"
 msgstr "Il tuo guadagno in questa attività"
 
-#: views.py:135
+#: views.py:133
 msgid "In this activity you chose how much to invest in a risky project"
 msgstr ""
 "In questa attività hai scelto quanto investire in un progetto rischioso"
 
-#: views.py:146
+#: views.py:144
 msgid "This activity is over. Results will be shown later."
 msgstr "Questa attività è conclusa. I risultati verranno mostrati in seguito."
 
-#~ msgid "bla bla"
-#~ msgstr ""
-#~ "Hai a disposizione 100 punti.  Puoi decidere di investire una parte di "
-#~ "questa somma in un progetto rischioso. Se il progetto va bene cosa che "
-#~ "può accadere con probabilità pari a 1/2  per ogni punto investito "
-#~ "otterrai 2,5 punti. </p><p>Se invece il progetto va male perderai tutti i "
-#~ "punti investiti in esso. I punti che non investi rimarranno a te "
-#~ "inalterati quale che sia l'esito del progetto."
+#~ msgid "Understanding Question 1 of 1"
+#~ msgstr "Domanda di comprensione 1 di 1"
